--- a/src/App.css
+++ b/src/App.css
@@ -104,3 +104,76 @@
   justify-content: flex-end;
   margin-top: 20px;
 }
+
+/* section{
+  height: 100vh;
+  width: 100vw;
+  background-color: #101010;
+  
+} */
+
+.wall{
+  width: 100%;
+  height: 100%;
+  background-image: url(./Public/Assets/wallpaper.jpg);
+  background-size: cover;
+  background-position: 50% 10%;
+  /* position: relative; */
+}
+
+/* .wall::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background:  linear-gradient(transparent -30%,#101010);
+  background: -webkit-gradient(linear,left top, left bottom, color-stop(-30%, transparent),to(#101010));
+} */
+
+.profile{
+  width: 400px;
+  height: 400px;
+  border: black solid 1px;
+  border-radius: 5px;
+}
+
+.payment{
+  margin-top: 100px ;
+  width: 200px;
+  height: 400px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+/* .container{ */
+  /* display: flex; */
+/* } */
+
+.child{
+  width: 300px;
+  height: 500px;
+  /* border: 1px solid black; */
+  margin-top: 50px;
+  margin-bottom: 100px;
+  border-radius: 5px;
+  background-color: whitesmoke;
+}
+
+.login{
+  margin: 0 auto;
+  width: 500px;
+  height: 300px;
+  border-radius: 6px;
+  background-color: whitesmoke;
+}
+
+.register{
+  margin: 0 auto;
+  width: 500px;
+  height: 300px;
+  border-radius: 6px;
+  background-color: whitesmoke;
+  
+}
